Sneaker controller added
